Page Overflow with scrollspy fixed

--- a/client/scss/globalStyles.scss
+++ b/client/scss/globalStyles.scss
@@ -76,7 +76,7 @@ body {
   @include poppins-bold;
   @include heading-gradient;
 
-  padding-top: 4.25rem;
+  padding-top: 5rem;
   margin-bottom: 2.5rem;
   font-size: var(--heading-font-size);
   text-transform: uppercase;
